<resources>
    <string name="app_name">SenseGL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gyrometer">Gyrometer</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="light_sensor">Light Sensor</string>
    <string name="pressure_sensor">Pressure Sensor</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="humidity_sensor">Humidity Sensor</string>
    <string name="sensapp">SensApp</string>
    <string name="home" />
</resources>